--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,20 @@ code {
   height: 50vh ;
   align-items: center;
 }
+.filter{
+  color: #faffff !important;
+}
+.tableCell{
+  text-align: center !important;
+}
+.tableRow{
+ background-color: #ede7f6 !important;
+}
+.tableHeaderCell{
+  text-align: center !important; 
+  font-weight: bolder !important;
+}
+.table{
+  min-width: 650;
+  margin-top: 3;
+}
